--- a/Website-Improved/package.json
+++ b/Website-Improved/package.json
@@ -10,7 +10,7 @@
     "test": "vitest",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d docs"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
